# verse-lang

./: Cargo.toml
src/: main.rs  parser.rs  verse.rs
src/ast/: exportable.rs  expression.rs  field.rs  function.rs  import.rs  mod.rs  module.rs  pattern.rs
src/runtime/: context.rs  error.rs  function.rs  id.rs  library.rs  match.rs  mod.rs  name.rs  namespace.rs  resolver.rs  scope.rs  type.rs  value.rs  verse.rs
src/runtime/modules/: mod.rs  sys.rs  text.rs  unicode.rs
src/runtime/ops/: add.rs  array.rs  block.rs  call.rs  destructure.rs  exec.rs  function.rs  import.rs  int.rs  literal.rs  mod.rs  none.rs  object.rs  pattern.rs  reference.rs  ret.rs  string.rs  subtract.rs  value.rs
src/runtime/patterns/: and.rs  any.rs  array.rs  default.rs  equal.rs  mod.rs  native.rs  not.rs  or.rs  project.rs  quantity.rs  ref.rs  rule.rs  then.rs  transform.rs  type.rs  var.rs
src/runtime/resolvers/: memory.rs  mod.rs
src/transformation/: error.rs  mod.rs  pattern.rs  scope.rs  tokenizer.rs  transform.rs
src/transformation/patterns/: any.rs  default.rs  mod.rs  or.rs  quantity.rs  range.rs  value.rs
