[package]
name = "v"
version = "0.1.0"
authors = ["Justin Chase <jchase@structural.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation="1.3.0"
map_vec="0.3.0"
data-encoding = "2.2.0"
rand = "0.7.3"
